set ccd simulator when libcamera used

--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -584,7 +584,7 @@ $('#form_timezone').on('submit', function() {
 
     <hr>
 
-    <div><span class="badge rounded-pill bg-info text-dark">Note</span> This has no effect on libcamera-based configurations</div>
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> This has no effect on libcamera-based configurations.  CCD Simulator is normally configured when libcamera is in use</div>
 
     <div><span class="badge rounded-pill bg-info text-dark">Note</span> The default driver selection will not update until the main camera selection [left] has changed</div>
 
