--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3366,6 +3366,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.IMAGE_CIRCLE_MASK__CROP.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_CIRCLE_MASK__CROP(class='form-check-input') }}
+                <div id="IMAGE_CIRCLE_MASK__CROP-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Crop image to image circle boundary</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.IMAGE_CIRCLE_MASK__OUTLINE.label }}
         </div>
         <div class="col-sm-2">
@@ -8848,6 +8861,7 @@ const checkbox_field_names = [
     'IMAGE_FLIP_H',
     'IMAGE_CIRCLE_MASK__ENABLE',
     'IMAGE_CIRCLE_MASK__OUTLINE',
+    'IMAGE_CIRCLE_MASK__CROP',
     'FISH2PANO__ENABLE',
     'FISH2PANO__FLIP_H',
     'FISH2PANO__ENABLE_CARDINAL_DIRS',
