--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3374,7 +3374,10 @@ var camera_id = {{ camera_id }};
                 <div id="IMAGE_CIRCLE_MASK__CROP-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Crop image to image circle boundary</div>
+        <div class="col-sm-8">
+            <div>Crop image to image circle boundary</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Image circle offsets are maintained in the final image</div>
+        </div>
     </div>
 
     <div class="form-group row">
