--- a/indi_allsky/flask/templates/adu.html
+++ b/indi_allsky/flask/templates/adu.html
@@ -8,6 +8,8 @@ pre {
     white-space: pre-wrap;
 }
 </style>
+<link href="{{ url_for('indi_allsky.static', filename='DataTables/datatables.min.css') }}" rel="stylesheet">
+<script src="{{ url_for('indi_allsky.static', filename='DataTables/datatables.min.js') }}"></script>
 <script type="text/javascript">
 var camera_id = {{ camera_id }};
 </script>
