update table size

--- a/indi_allsky/flask/templates/lag.html
+++ b/indi_allsky/flask/templates/lag.html
@@ -54,6 +54,7 @@ var camera_id = {{ camera_id }};
 function init() {
     new DataTable('#lag-table', {
         searching: false,
+        lengthMenu: [20, 50, 100, -1],
         layout: {
             topEnd: 'buttons',
         },
