--- a/indi_allsky/flask/templates/generate.html
+++ b/indi_allsky/flask/templates/generate.html
@@ -235,7 +235,14 @@ $( document ).ready(function() {
 
     new DataTable('#tasks-table', {
         searching: false,
-        layout: {},
+        layout: {
+            topEnd: 'buttons',
+        },
+        buttons: [
+            'copy',
+            'csv',
+            'excel',
+        ]
     });
 });
 
