--- a/indi_allsky/flask/templates/lag.html
+++ b/indi_allsky/flask/templates/lag.html
@@ -59,6 +59,7 @@ function init() {
             topEnd: 'buttons',
         },
         buttons: [
+            'copy',
             'csv',
             'excel',
         ]
