--- a/indi_allsky/flask/templates/adu.html
+++ b/indi_allsky/flask/templates/adu.html
@@ -61,11 +61,11 @@ function init() {
             topEnd: 'buttons',
         },
         buttons: [
+            'copy',
             'csv',
             'excel',
         ]
     });
-
 }
 
 
