--- a/indi_allsky/flask/templates/lag.html
+++ b/indi_allsky/flask/templates/lag.html
@@ -53,10 +53,10 @@ var camera_id = {{ camera_id }};
 <script>
 function init() {
     new DataTable('#lag-table', {
-        searching: false,
+        searching: true,
         lengthMenu: [20, 50, 100, -1],
         layout: {
-            topEnd: 'buttons',
+            topEnd: ['buttons', 'search'],
         },
         buttons: [
             'copy',
