--- a/indi_allsky/flask/templates/log.html
+++ b/indi_allsky/flask/templates/log.html
@@ -174,6 +174,11 @@ $( document ).ready(function() {
         <div id="log_data">
         </div>
     </div>
+
+    <div class="col-12 text-center">
+        <a href="{{ url_for('indi_allsky.log_download_view') }}"><span class="badge pill bg-success">Log Download</span></a>
+        <a href="{{ url_for('indi_allsky.log_webapp_download_view') }}"><span class="badge pill bg-secondary">Webapp Log Download</span></a>
+    </div>
 </div>
 
 <script>
