--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -36,6 +36,8 @@ var camera_id = {{ camera_id }};
         <a href="{{ url_for('indi_allsky.log_webapp_download_view') }}"><span class="badge pill bg-secondary">Webapp Log Download</span></a>
     </div>
     <div class="col-sm-1">
+    </div>
+    <div class="col-sm-1">
       <div id="loader_support" class="spinner-border text-info" role="status">
         <span class="visually-hidden">Loading...</span>
       </div>
