--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -30,7 +30,7 @@ var camera_id = {{ camera_id }};
         </a>
     </div>
     <div class="col-sm-1">
-        <a href="{{ url_for('indi_allsky.log_download_view') }}"><span class="badge pill bg-success">Log Download</span></a>
+        <a href="{{ url_for('indi_allsky.log_download_view') }}"><span class="badge pill bg-success">Capture Log Download</span></a>
     </div>
     <div class="col-sm-1">
         <a href="{{ url_for('indi_allsky.log_webapp_download_view') }}"><span class="badge pill bg-secondary">Webapp Log Download</span></a>
