--- a/indi_allsky/flask/templates/log.html
+++ b/indi_allsky/flask/templates/log.html
@@ -176,8 +176,8 @@ $( document ).ready(function() {
     </div>
 
     <div class="col-12 text-center">
-        <a href="{{ url_for('indi_allsky.log_download_view') }}"><span class="badge pill bg-success">Capture Log Download</span></a>
-        <a href="{{ url_for('indi_allsky.log_webapp_download_view') }}"><span class="badge pill bg-secondary">Webapp Log Download</span></a>
+        <a href="{{ url_for('indi_allsky.log_download_view') }}"><span class="badge pill bg-success">Capture Log<br>Download</span></a>
+        <a href="{{ url_for('indi_allsky.log_webapp_download_view') }}"><span class="badge pill bg-secondary">Webapp Log<br>Download</span></a>
     </div>
 </div>
 
