--- a/indi_allsky/flask/templates/log.html
+++ b/indi_allsky/flask/templates/log.html
@@ -178,7 +178,7 @@ $( document ).ready(function() {
     <div class="col-12 text-center">
         <a href="{{ url_for('indi_allsky.log_download_view') }}"><span class="badge pill bg-success">Capture Log<br>Download</span></a>
         <a href="{{ url_for('indi_allsky.log_webapp_download_view') }}"><span class="badge pill bg-secondary">Webapp Log<br>Download</span></a>
-        <a href="{{ url_for('indi_allsky.log_syslog_download_view') }}"><span class="badge pill bg-primary">System Log<br>Download</span></a>
+        <a href="{{ url_for('indi_allsky.log_syslog_download_view') }}"><span class="badge pill bg-primary">OS System Log<br>Download</span></a>
         <a href="{{ url_for('indi_allsky.log_kern_download_view') }}"><span class="badge pill bg-warning text-dark">Kernel Log<br>Download</span></a>
     </div>
 </div>
