--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -50,7 +50,7 @@ var camera_id = {{ camera_id }};
     <div class="col-sm-6">
     </div>
     <div class="col-sm-1">
-        <a href="{{ url_for('indi_allsky.log_syslog_download_view') }}"><span class="badge pill bg-primary">System Log<br>Download</span></a>
+        <a href="{{ url_for('indi_allsky.log_syslog_download_view') }}"><span class="badge pill bg-primary">OS System Log<br>Download</span></a>
     </div>
     <div class="col-sm-1">
         <a href="{{ url_for('indi_allsky.log_kern_download_view') }}"><span class="badge pill bg-warning text-dark">Kernel Log<br>Download</span></a>
